--- a/kona3engine/template/show.html
+++ b/kona3engine/template/show.html
@@ -6,8 +6,11 @@
     <div class="pure-u-1 pure-u-md-19-24 page_body">
       <div id="kona3_main">
         <div class="kona3_login_bar">
-          {{ if $edit_link != '' }}
-          <div class="login_bar1"><a href="{{ $edit_link }}">{{ "Edit" | lang }}</a></div>
+          {{ if $is_login }}
+          <div class="login_bar1">
+            <!-- edit button -->
+             {{ $edit_button_html | raw }}
+          </div>
           {{ endif }}
           {{ if $show_counter }}
           <div class="login_bar2 mojisu">{{ $cnt_txt }}字</div>
