--- a/kona3engine/template/login.html
+++ b/kona3engine/template/login.html
@@ -7,14 +7,15 @@
   <form
     id="user_login_form"
     class="pure-form pure-form-stacked" 
-    method="post" action="{{ $action }}">
+    method="post" action="{{ $action }}"
+    autocomplete="on">
     <input type="hidden" name="a_mode" value="trylogin">
-    <input type="hidden" name="edit_token" value="{{ $edit_token }}">
+    <input type="hidden" name="edit_token" value="{{ $edit_token }}" autocomplete="off">
     <label for="email">{{'Email' | lang}}:
-      <input id="email" type="text" name="a_email">
+      <input id="email" type="text" name="a_email" autocomplete="username">
     </label>
     <label for="pass">{{'Password' | lang}}:
-      <input id="pass" type="password" name="a_pw">
+      <input id="pass" type="password" name="a_pw" autocomplete="current-password">
     </label>
     <input class="pure-button pure-button-primary" type="submit" value="{{'Login' | lang}}">
   </form>
